Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>This extension basically provides a class library for sending HTTP requests and receiving HTTP responses from a RESTful API resource.<br>
 You can set many options by using Typo3-Backend, or even the HttpClient* setter.<br>
-The CRUD operations GET, POST, PUT, DELETE are supported.<br>
+It supports the CRUD operations, error logs, timeout, proxy with basic/digest authentication, ssl certificate, cookies, and others.<br>
 The HttpClient class is cURL library based.  </p>
 
 <h1>
