Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h1>
 
 <p>This extension basically provides a class library for sending HTTP requests and receiving HTTP responses from a RESTful API resource.<br>
-You can set many options by using Typo3-Backend, or even the HttpClient* setter.<br>
-It supports the CRUD operations, error logs, timeout, proxy with basic/digest authentication, ssl certificate, cookies, and others.<br>
+It supports the CRUD operations with the shorthands get/post/put/delete.<br>
+You can set many options such as error logs, timeout, proxy with basic/digest authentication, ssl certificate, cookies, and others.<br>
 The HttpClient class is cURL library based.  </p>
 
 <h1>
